added error msg when failing to register/login

--- a/templates/login.html
+++ b/templates/login.html
@@ -21,6 +21,7 @@
     </div>
     <h1>Welcome to Punct!</h1>
     <p>Login page for Punct</p>
+    <p class="error-msg">{{ msg }}</p>
     <form method="POST" action="">
         {{form.hidden_tag()}}
         {{form.username}}
