--- a/templates/login.html
+++ b/templates/login.html
@@ -70,6 +70,10 @@
             {{form.username}}
             <label for="password">Password</label>
             {{form.password}}
+            <div class="checkbox">
+                <label id="showPsw"><input type="checkbox" name="show-password" onclick="showPassword('psw')"> show
+                </label>
+            </div>
             {{form.submit(class="btn btn-default")}}
         </form>
     </div>
@@ -86,6 +90,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="./static/js/login.js"></script>
 </body>
 
 </html>
