--- a/templates/register.html
+++ b/templates/register.html
@@ -89,12 +89,22 @@
                     <label for="password">Password</label>
                     {{form.password}}
                 </div>
+                <div class="checkbox">
+                    <label id="showPsw"><input type="checkbox" name="show-password" onclick="showPassword('password')">
+                        show
+                    </label>
+                </div>
                 <div class="form group">
                     <label for="password-confirm">Confirm Password</label>
                     <input type="password" class="form-control" id="password-confirm" placeholder="Enter password again"
                         name="pswConfirm" onkeyup='checkpsw();' required>
                     <span id='message'></span>
 
+                </div>
+                <div class="checkbox">
+                    <label id="showPsw"><input type="checkbox" name="show-password"
+                            onclick="showPassword('password-confirm')"> show
+                    </label>
                 </div>
             </div>
             <div class="reg-btns">
