--- a/templates/register.html
+++ b/templates/register.html
@@ -20,30 +20,30 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
 
     <!--favicon-->
-    <link rel="shortcut icon" href="./static/favicon/favicon.ico">
-    <link rel="icon" sizes="16x16 32x32 64x64" href="./static/favicon/favicon.ico">
-    <link rel="icon" type="image/png" sizes="196x196" href="./static/favicon/favicon-192.png">
-    <link rel="icon" type="image/png" sizes="160x160" href="./static/favicon/favicon-160.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="./static/favicon/favicon-96.png">
-    <link rel="icon" type="image/png" sizes="64x64" href="./static/favicon/favicon-64.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./static/favicon/favicon-32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./static/favicon/favicon-16.png">
-    <link rel="apple-touch-icon" href="./static/favicon/favicon-57.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="./static/favicon/favicon-114.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="./static/favicon/favicon-72.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="./static/favicon/favicon-144.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="./static/favicon/favicon-60.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="./static/favicon/favicon-120.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="./static/favicon/favicon-76.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="./static/favicon/favicon-152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./static/favicon/favicon-180.png">
+    <link rel="shortcut icon" href="/static/favicon/favicon.ico">
+    <link rel="icon" sizes="16x16 32x32 64x64" href="/static/favicon/favicon.ico">
+    <link rel="icon" type="image/png" sizes="196x196" href="/static/favicon/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="160x160" href="/static/favicon/favicon-160.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/static/favicon/favicon-96.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="/static/favicon/favicon-64.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16.png">
+    <link rel="apple-touch-icon" href="/static/favicon/favicon-57.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/static/favicon/favicon-114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/static/favicon/favicon-72.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/static/favicon/favicon-144.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/static/favicon/favicon-60.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/static/favicon/favicon-120.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/static/favicon/favicon-76.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/static/favicon/favicon-152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon/favicon-180.png">
     <meta name="msapplication-TileColor" content="#FFFFFF">
-    <meta name="msapplication-TileImage" content="./static/favicon/favicon-144.png">
-    <meta name="msapplication-config" content="./static/favicon/browserconfig.xml">
+    <meta name="msapplication-TileImage" content="/static/favicon/favicon-144.png">
+    <meta name="msapplication-config" content="/static/favicon/browserconfig.xml">
 
     <!--CSS file-->
-    <link rel="stylesheet" type="text/css" href="./static/css/general.css">
-    <link rel="stylesheet" type="text/css" href="./static/css/register.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/general.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/register.css">
 
     <title>Punct</title>
 
@@ -52,7 +52,7 @@
 
 <body>
     <div class="container text-center my-5">
-        <img src="./static/img/logo.png" alt="Punct" id="logo">
+        <img src="/static/img/logo.png" alt="Punct" id="logo">
     </div>
 
     <div class="container spacer" id="back">
@@ -133,7 +133,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
-        <script src="./static/js/register.js"></script>
+        <script src="/static/js/register.js"></script>
 </body>
 
 </html>
