--- a/templates/to-do.html
+++ b/templates/to-do.html
@@ -141,6 +141,7 @@
                     <td>Finished</td>
                     {%endif%}
                     <td>{{task.duedate.strftime("%b %d %Y")}}</td>
+                    <td><span class="close" onclick="window.location.href='updatetask/{{task.id}}';">&check;</span></td>
                     <td><span class="close" onclick="window.location.href='deletetask/{{task.id}}';">&times;</span></td>
                     <!-- <td>
                         {% if task.completion == True %}
