--- a/templates/to-do.html
+++ b/templates/to-do.html
@@ -54,6 +54,8 @@
         <img src="/static/img/logo.png" alt="Punct" id="logo">
     </div>
 
+    <!-- link to calendar view-->
+    <a href="{{url_for('calendar')}}">calendar</a>
 
     <nav class="navbar navbar-expand-md navbar-light justify-content-end ">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
