--- a/templates/to-do.html
+++ b/templates/to-do.html
@@ -79,7 +79,7 @@
 
 
     <div class="container text-right mt-5 container-addbtn">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+        <button type="button" class="btn btn-ntask py-2" data-toggle="modal" data-target="#exampleModal">
             New Task
         </button>
     </div>
@@ -95,8 +95,8 @@
                 <div class="modal-body">
                     <form action="/addtask" method="POST">
                         <div class="form-group row">
-                            <label for="taskName" class="col-sm-2 col-form-label label-special">Task Name:</label>
-                            <div class="col-sm-10">
+                            <label for="taskName" class="col-sm-3 col-form-label label-special">Task Name:</label>
+                            <div class="col-sm-9">
                                 <input type="text" class="form-control" id="taskName" name="taskName" required>
                             </div>
                         </div>
@@ -105,15 +105,15 @@
                             <textarea class="form-control" rows="3" id="descr" name="descr"></textarea>
                         </div>
                         <div class="form-group row mt-4">
-                            <label for="dueDate" class="col-sm-2 col-form-label label-special">Due
+                            <label for="dueDate" class="col-sm-3 col-form-label label-special">Due
                                 Date:</label>
-                            <div class="col-sm-10">
+                            <div class="col-sm-9">
                                 <input type="date" class="form-control" id="dueDate" name="dueDate" required>
                             </div>
                         </div>
                         <input type="hidden" id="status" value="Ongoing">
                         <div class="text-center">
-                            <button type="submit" class="btn" onclick="validateForm()">Add</button>
+                            <button type="submit" class="btn btn-add px-5 mt-5" onclick="validateForm()">Add</button>
                         </div>
                     </form>
                 </div>
