--- a/static/css/todo.css
+++ b/static/css/todo.css
@@ -26,9 +26,13 @@
 
 }
 
-.modal-dialog{
-    max-width:70%;
+@media (min-width: 576px) {
+    .modal-dialog {
+        max-width: 650px;
+    }
+
 }
+
 .modal-header{
     padding:0.5rem 1rem;
     border-bottom:0;
@@ -58,8 +62,34 @@ tr.strikeout td:before {
   width: 100%;
 }
 
-
+tr.change {
+    color:#C9C7BE;
+}
 
 tbody{
     cursor: pointer;
+}
+
+
+.btn-ntask:hover{
+    opacity:0.7;
+}
+
+.form-control{
+    border: 2px solid #F4AE1D;
+    box-shadow: 2px 2px 4px rgb(0 0 0 / 25%);
+    border-radius: 10px;
+
+}
+
+.btn-add{
+    font-size: 22px;
+    border-radius: 0.7rem;
+    
+
+}
+
+thead{ 
+    font-size: 25px;
+    font-family: 'PT Serif Caption', serif;
 }
