--- a/static/css/login.css
+++ b/static/css/login.css
@@ -57,6 +57,10 @@ label {
     border: 0;
 }
 
+.invalid{
+    background-color: #ffdddd;
+}
+
 @media (max-width: 576px){
     #submit{
         font-size:1.25rem;
